--- a/index.html
+++ b/index.html
@@ -5,11 +5,233 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Insure Insrurance</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
+    <nav>
+        <div>
+
+            <a href="index.html" class="nav-brand">Insure Insrurance</a>
+        </div>
+
+        <div>
+            <ul class="nav-link">
+                <li>
+
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+
+                    <a href="#insurance">Insrurance</a>
+                </li>
+                <li>
+
+                    <a href="#why-choose-us">Why Choose Us</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact</a>
+
+                </li>
+            </ul>
+
+        </div>
+    </nav>
+    <section class="hero" id="hero">
+        <div class="container ">
+            <div class="row">
+                <div class="col-6">
+                    <h1>Get the right Insrurance that meet your needs.</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti, labore soluta? Delectus ullam
+                        labore, obcaecati itaque assumenda beatae sed commodi eligendi, nam cum molestias sit nobis ea!
+                        Sint repudiandae possimus temporibus expedita? Earum, temporibus laborum.
+                    </p>
+                    <a href="contact.html" class="btn btn-primary">Get Quote</a>
+                </div>
+                <div class="col-6"><img src="images/hero-banner.jpg" alt="Hero Image"></div>
+                <div class="partner">
+                    <img src="images/partners/.png" alt="">
+                    <img src="images/partners/.png" alt="">
+                    <img src="images/partners/.png" alt="">
+                    <img src="images/partners/.png" alt="">
+                    <img src="images/partners/.png" alt="">
+                    <img src="images/partners/.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="insurance-choose" id="insurance-choose">
+        <div class="container w-80 ">
+            <h1 class="text-center">Choose Your Insurance</h1>
+            <p class="text-center lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptatibus,
+                perspiciatis
+                delectus quam a
+                eligendi quasi, placeat dolorum est.</p>
+            <div class="insurance-card-list ">
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="card-title">Indivisual Health Insurance</h3>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat voluptate
+                            veniam quo facilis fugiat ipsam eius corporis! Eos cumque quidem.</p>
+                        <a href="#" class="card-link link-primary">View Details</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="card-title">Group Health Insurance</h3>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat voluptate
+                            veniam quo facilis fugiat ipsam eius corporis! Eos cumque quidem.</p>
+                        <a href="#" class="card-link link-primary">View Details</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="card-title">Life Insurance</h3>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat voluptate
+                            veniam quo facilis fugiat ipsam eius corporis! Eos cumque quidem.</p>
+                        <a href="#" class="card-link link-primary">View Details</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="card-title">Pensions & Annuities</h3>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat voluptate
+                            veniam quo facilis fugiat ipsam eius corporis! Eos cumque quidem.</p>
+                        <a href="#" class="card-link link-primary">View Details</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="card-title">Term Insurance</h3>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat voluptate
+                            veniam quo facilis fugiat ipsam eius corporis! Eos cumque quidem.</p>
+                        <a href="#" class="card-link link-primary">View Details</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="card-title">Property & Casualty Insurance</h3>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat voluptate
+                            veniam quo facilis fugiat ipsam eius corporis! Eos cumque quidem.</p>
+                        <a href="#" class="card-link link-primary">View Details</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <section class="why-us" id="why-us">
+        <div class="container w-90">
+            <div class="row">
+                <div class="col-6">
+
+                    <h1>Why Choose Us</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit consequuntur ad saepe? Sequi
+                        veritatis nisi molestias ab sapiente .</p>
+                    <div class="row short-desc">
+                        <div class="col-6">
+
+                            <h4>Excelent Protection</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex quo suscipit beatae veniam
+                                qui possimus laboriosam debitis officiis illo consequuntur.</p>
+                        </div>
+                        <div class="col-6">
+                            <h4>HIgh Saving Potential</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex quo suscipit beatae veniam
+                                qui possimus laboriosam debitis officiis illo consequuntur.</p>
+                        </div>
+                    </div>
+                    <a href="contact.html" class="btn btn-primary">Get Quote</a>
+                </div>
+                <div class="col-6"><img src="images/why-choose-us.png" alt=""></div>
+            </div>
+        </div>
+    </section>
+    <section class="how-we-work" id="how-we-work">
+        <h4 class="text-center">How Insure Insurance Works</h4>
+        <h1 class="text-center w-50">We help you find the best insurance that suites you.</h1>
+        <p class="text-center lead w-60">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt aspernatur
+            eveniet a
+            tenetur, commodi quas
+            nostrum rem necessitatibus ad possimus ipsam voluptatum.</p>
+        <div class="row working-list">
+            <div class="col-3">
+                <img src="images/how-we-works/1.png" alt="">
+                <h5>Choose a Insurance</h5>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam optio ad dolore corporis maxime
+                    illum.</p>
+            </div>
+            <div class="col-3"> <img src="images/how-we-works/2.png" alt="">
+                <h5>Consult With our Experts</h5>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam optio ad dolore corporis maxime
+                    illum.</p>
+            </div>
+            <div class="col-3"> <img src="images/how-we-works/3.png" alt="">
+                <h5>Set an Appointment</h5>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam optio ad dolore corporis maxime
+                    illum.</p>
+            </div>
+            <div class="col-3"> <img src="images/how-we-works/4.png" alt="">
+                <h5>You're Protected now</h5>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam optio ad dolore corporis maxime
+                    illum.</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <h3 class="w-90">Insure Insurance</h3>
+        <hr>
+        <div class="footer-container w-90">
+            <div class="row">
+                <div class="col-3">
+                    <h5>Company</h5>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Get an instant quote</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Sitemap</a></li>
+                    </ul>
+                </div>
+                <div class="col-3">
+                    <h5>Insurance</h5>
+                    <ul>
+                        <li><a href="#">Indivisual Health Insurance</a></li>
+                        <li><a href="#">Group Health Insurance</a></li>
+                        <li><a href="#">Life Insurance</a></li>
+                        <li><a href="#">Pensions & Annuities</a></li>
+                        <li><a href="#">Property & Casualty Insurance</a></li>
+                    </ul>
+                </div>
+                <div class="col-3">
+                    <h5>Legal</h5>
+                    <ul>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Terms & Conditions</a></li>
+
+                    </ul>
+                </div>
+                <div class="col-3">
+                    <h5>Subscribe</h5>
+                    <form action="">
+                        <div class="mb-3">
+                            <!-- <label for="InputEmail" class="form-label">Email address</label> -->
+                            <input type="email" class="form-control" id="InputEmail" placeholder="Enter email address">
+                            <button type="submit" class="btn btn-primary">Subscribe</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <p class="w-90 footer-text">Insure Insurance © 2022 All Rights Reserved.</p>
+    </footer>
     <script src="assets/js/script.js"></script>
 </body>
 
