sample removed, came with better navigation bar solution, functing meddia queries add, will fix for large screen-mid-screen later

--- a/index.html
+++ b/index.html
@@ -14,34 +14,41 @@
 </head>
 
 <body>
-    <nav>
-        <div>
 
+    <header>
+        <div class="container">
             <a href="index.html" class="nav-brand">Insure Insrurance</a>
+            <!-- <h1>the nav</h1> -->
+            <nav>
+                <ul>
+
+                    <li>
+                        <a href="index.html">Home</a>
+
+                    </li>
+                    <li>
+                        <a href="#insurance">Insrurance</a>
+
+                    </li>
+                    <li>
+                        <a href="#why-choose-us">Why Choose Us</a>
+
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
+
+
+                </ul>
+            </nav>
+            <div id="ham">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
         </div>
+    </header>
 
-        <div>
-            <ul class="nav-link">
-                <li>
-
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-
-                    <a href="#insurance">Insrurance</a>
-                </li>
-                <li>
-
-                    <a href="#why-choose-us">Why Choose Us</a>
-                </li>
-                <li>
-                    <a href="contact.html">Contact</a>
-
-                </li>
-            </ul>
-
-        </div>
-    </nav>
     <section class="hero" id="hero">
         <div class="container ">
             <div class="row">
